# http11

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  pyproject.toml
.agents/skills/h11r-audit/: SKILL.md
.agents/skills/h11r-audit/agents/: openai.yaml
.agents/skills/h11r-implementation/: SKILL.md
.agents/skills/h11r-implementation/agents/: openai.yaml
.agents/skills/h11r-knowledge/: SKILL.md
.agents/skills/h11r-knowledge/agents/: openai.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-question.yml
.github/workflows/: ci.yml  publish-docs.yml  release.yml
crates/h11r/: Cargo.toml  LICENSE.h11
crates/h11r-python/: Cargo.toml  build.rs  pyproject.toml
crates/h11r-python/benchmarks/: compare_h11.py  render_results.py
crates/h11r-python/python/h11r/: __init__.py  __init__.pyi  _core.pyi
crates/h11r-python/src/: api.rs  lib.rs
crates/h11r-python/tests/: test_api.py  test_examples.py  test_import.py  test_interop.py
crates/h11r/benches/: h11r.rs
crates/h11r/src/: connection.rs  lib.rs  method.rs  state.rs  status.rs  wire.rs
crates/h11r/tests/: protocol.rs
crates/http11/: Cargo.toml
crates/http11-python/: pyproject.toml
dev/: index.html  search.json
dev/advanced/: index.html
dev/contributing/: index.html
dev/integration/: index.html
dev/round-trip/: index.html
docs/assets/: python-benchmark.json
docs/site/: advanced.md  getting-started.md
docs/site/stylesheets/: extra.css
examples/: README.md
examples/python/: asyncio_server.py  pipelining.py  round_trip.py  streaming_body.py  websocket_upgrade.py  zero_copy_body.py
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: h11r_fragmentation.rs  h11r_receive.rs  h11r_send.rs
fuzz/fuzz_targets/common/: mod.rs
latest/advanced/: index.html
latest/api/: index.html
latest/changelog/: index.html
latest/concepts/: index.html
latest/integration/: index.html
latest/license/: index.html
latest/round-trip/: index.html
latest/security/: index.html
