[package]
name = "h11r-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
h11r = { path = "../crates/h11r" }

[[bin]]
name = "h11r_receive"
path = "fuzz_targets/h11r_receive.rs"
test = false
doc = false
bench = false

[[bin]]
name = "h11r_fragmentation"
path = "fuzz_targets/h11r_fragmentation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "h11r_send"
path = "fuzz_targets/h11r_send.rs"
test = false
doc = false
bench = false
