[build-system]
requires = ["maturin>=1.14,<2.0"]
build-backend = "maturin"

[project]
name = "h11r"
dynamic = ["version"]
description = "A Sans-I/O HTTP/1.1 protocol engine for Python, powered by Rust."
readme = "../../README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "LICENSE.h11"]
keywords = ["http", "http1", "h11r", "protocol", "rust", "sans-io"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading :: 2 - Beta",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Changelog = "https://github.com/cnzakii/h11r/blob/main/CHANGELOG.md"
Source = "https://github.com/cnzakii/h11r"
Issues = "https://github.com/cnzakii/h11r/issues"

[tool.maturin]
bindings = "pyo3"
module-name = "h11r._core"
python-source = "python"
exclude = [
    "python/**/__pycache__",
    "python/**/*.pyc",
    "python/**/*.pyo",
]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "src/**/*.rs" },
    { file = "../../Cargo.toml" },
    { file = "../../Cargo.lock" },
]
