[package]
name = "http11"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Sans-I/O HTTP/1.1 protocol engine"
readme = "../../README.md"
publish = true
repository = "https://github.com/cnzakii/http11"
keywords = ["http", "http1", "http11", "sans-io", "protocol"]
categories = ["network-programming"]

[dependencies]
httparse = "1.10.1"

[dev-dependencies]
criterion = { version = "0.8.2", default-features = false }

[[bench]]
name = "http11"
harness = false
